<resources>
    <string name="app_name">Smart Kitchen</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="about">About</string>
    <string name="version_1_0_0">Version : 1.0.0</string>
    <string name="app_about_description">Smart Kitchen app help waiters and kitchen coordinators to deliver customer orders efficiently.</string>
    <string name="no_orders_in_ready_queue">No orders in Ready queue!</string>
    <string name="no_orders_in_todo_queue">No orders in Todo queue!</string>
    <string name="no_orders_in_new_queue">No orders in New queue!</string>
    <string name="no_orders_in_confirmed_queue">No orders in Confirmed queue!</string>
    <string name="sign_out">Sign Out</string>
    <string name="pref_already_signed_in">already_signed_in</string>
    <string name="pref_role">role</string>
    <string name="empty_streets">empty streets</string>
    <string name="man_looking_at_a_void">Man looking at a void</string>
    <string name="man_and_woman_looking_at_an_empty_box">Man and woman looking at an empty box</string>
</resources>