<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.AboutFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:fontFamily="@font/lora_regular"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/version_1_0_0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/app_about_description"
        android:textAlignment="center" />

</androidx.appcompat.widget.LinearLayoutCompat>